package enums;

public enum TipoBaralho {
	TRADICIONAL,
	UNO;
}
